# xskillscore

./: .coverage  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  HOWTOCONTRIBUTE.rst  HOWTORELEASE.rst  MANIFEST.in  README.rst  conftest.py  dev.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.eggs/: README.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ISSUE.md
.github/workflows/: cancel-duplicate-runs.yaml  comment_binder_pr_link.yml  lint.yml  python-publish.yml  upstream-dev-ci.yml  upstream.yml  xskillscore_installs.yml  xskillscore_testing.yml
asv_bench/: asv.conf.json
asv_bench/benchmarks/: __init__.py  deterministic.py  probabilistic.py  xr_vs_xs.py
ci/: dev.yml  doc.yml  docs_notebooks.yml  install-upstream-wheels.sh  minimum-tests.yml  requirements-py36.yml  run-linter.sh
docs/: requirements.txt
docs/source/: api.rst  conf.py  contributors.rst  geophysical-data.ipynb  index.rst  quick-start.ipynb  related-projects.rst  tabular-data.ipynb
docs/source/api/: xskillscore.Contingency.accuracy.rst  xskillscore.Contingency.bias_score.rst  xskillscore.Contingency.correct_negatives.rst  xskillscore.Contingency.equit_threat_score.rst  xskillscore.Contingency.false_alarm_rate.rst  xskillscore.Contingency.false_alarm_ratio.rst  xskillscore.Contingency.false_alarms.rst  xskillscore.Contingency.gerrity_score.rst  xskillscore.Contingency.heidke_score.rst  xskillscore.Contingency.hit_rate.rst  xskillscore.Contingency.hits.rst  xskillscore.Contingency.misses.rst  xskillscore.Contingency.odds_ratio.rst  xskillscore.Contingency.odds_ratio_skill_score.rst  xskillscore.Contingency.peirce_score.rst  xskillscore.Contingency.rst  xskillscore.Contingency.success_ratio.rst  xskillscore.Contingency.table.rst  xskillscore.Contingency.threat_score.rst  xskillscore.brier_score.rst  xskillscore.core.deterministic.effective_sample_size.rst  xskillscore.core.deterministic.mae.rst  xskillscore.core.deterministic.mape.rst  xskillscore.core.deterministic.median_absolute_error.rst  xskillscore.core.deterministic.mse.rst  xskillscore.core.deterministic.pearson_r.rst  xskillscore.core.deterministic.pearson_r_eff_p_value.rst  xskillscore.core.deterministic.pearson_r_p_value.rst  xskillscore.core.deterministic.r2.rst  xskillscore.core.deterministic.rmse.rst  xskillscore.core.deterministic.smape.rst  xskillscore.core.deterministic.spearman_r.rst  xskillscore.core.deterministic.spearman_r_eff_p_value.rst  xskillscore.core.deterministic.spearman_r_p_value.rst  xskillscore.core.probabilistic.brier_score.rst  xskillscore.core.probabilistic.crps_ensemble.rst  xskillscore.core.probabilistic.crps_gaussian.rst  xskillscore.core.probabilistic.crps_quadrature.rst  xskillscore.core.probabilistic.threshold_brier_score.rst  xskillscore.core.resampling.resample_iterations.rst  (+34 more)
docs/source/examples/: Demo.ipynb
docs/source/examples/.ipynb_checkpoints/: Demo-checkpoint.ipynb
licenses/: SCIPY_LICENSE.txt
xskillscore/: .readthedocs.yaml  __init__.py
xskillscore/core/: accessor.py  comparative.py  contingency.py  deterministic.py  np_contingency.py  np_deterministic.py  np_probabilistic.py  probabilistic.py  resampling.py  stattests.py  test.py  types.py  util.py  utils.py
xskillscore/tests/: conftest.py  test_accessor.py  test_accessor_deterministic.py  test_accessor_probabilistic.py  test_comparative.py  test_contingency.py  test_deterministic.py  test_effective_p_value.py  test_gridded_metrics.py  test_mask_skipna.py  test_metric_results_accurate.py  test_np_deterministic.py  test_probabilistic.py  test_resampling.py  test_skipna_functionality.py  test_stattests.py  test_test.py  test_versioning.py  test_weighted_metric_results_accurate.py  test_xr_metrics.py
xskillscore/versioning/: print_versions.py
xskillscore/xr/: __init__.py  deterministic.py
