[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "xskillscore"
dependencies = [
  "dask[array] >=2023.4.0",
  "numpy >=1.24",
  "properscoring",
  "scipy >=1.10",
  "statsmodels",
  "xarray>=2023.4.0",
  "xhistogram>=0.3.2",
]
authors = [{name = "Ray Bell", email = "rayjohnbell0@gmail.com"}]
description = "Metrics for verifying forecasts"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
dynamic = ["readme", "version"]

[project.optional-dependencies]
accel = ["bottleneck", "numba >=0.57"]
test = [
    "xskillscore[accel]",
    "cftime",
    "matplotlib",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-xdist",
    "scikit-learn",
]
complete = [
    "xskillscore[test]",
    "doc8",
    "ipykernel",
    "ipython",
    "nbsphinx",
    "nbstripout",
    "properscoring",
    "pytest-sugar",
    "sphinx >=6.0.0",
    "sphinx-autosummary-accessors",
    "sphinx-copybutton",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
repository = "https://github.com/xarray-contrib/xskillscore"
documentation = "https://xskillscore.readthedocs.io/en/stable/"

[tool.setuptools]
packages = ["xskillscore"]

[tool.setuptools_scm]
fallback_version = "9999"
version_file = "xskillscore/_version.py"

[tool.setuptools.dynamic]
readme = {file = ["README.rst"], content-type = "text/markdown"}

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["xskillscore/tests"]
addopts = "--color=yes --verbose"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "flaky: marks tests as flaky (deselect with '-m \"not flaky\"')",
    "network: marks tests that require network access (deselect with '-m \"not network\"')",
]

[tool.doc8]
max-line-length = 100
ignore-path = [".eggs/", "docs/source/api/"]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]
lint.select = [
    # Pyflakes
    "E",
    # pycodestyle
    "F",
    # isort
    "I001",
]

# Ignore `F401` (imported but unused) in all `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"

[tool.black]
target-version = ["py39", "py310", "py311", "py312", "py313"]
line-length = 100
